# rxs-qmacvisual

./: README.md  SECURITY.md
src/: CMakeLists.txt  HDR算子SDK.docx  QMacVisual.sln  光度立体法SDK.docx  焦距合成SDK.docx
src/QMainPro/: CMakeLists.txt
src/QMainPro/QMacVisual/: CMakeLists.txt  Debug-PropertySheet.props  FlowListWidget.h  GlobalVariable.h  QGraphicsViews.h  QMacVisual.vcxproj  QRoundProgressBar.h  QToolBase.h  QtWidgetsSaveLoad.h  Release-PropertySheet.props  autoThread.h  basemainwindow.h  clogmodel.h  cmysplashscreen.h  datavar.h  dockwidget.h  frmAbout.h  frmAbout.ui  frmCameraSetUp.h  frmCameraSetUp.ui  frmGlobalVariable.h  frmGlobalVariable.ui  frmImageLayout.h  frmImageLayout.ui  frmImageView.h  frmImageView.ui  frmInstrumentation.h  frmInstrumentation.ui  frmLink.h  frmLink.ui  frmLog.h  frmLog.ui  frmLogin.h  frmLogin.ui  frmPermis.h  frmPermis.ui  frmProItemTab.h  frmProItemTab.ui  frmProcessSetUp.h  frmProcessSetUp.ui  (+21 more)
src/QMainPro/QMacVisual/FlowListWidget/: FlowListWidget.cpp
src/QMainPro/QMacVisual/GlobalVariable/: GlobalVariable.cpp
src/QMainPro/QMacVisual/QGraphicsViews/: QGraphicsViews.cpp
src/QMainPro/QMacVisual/QRoundProgressBar/: QRoundProgressBar.cpp
src/QMainPro/QMacVisual/QToolBase/: QToolBase.cpp
src/QMainPro/QMacVisual/QWorld/: FolderOperation.cpp  QWorld.h  SQLite.cpp  SoftKey.cpp  XML.cpp
src/QMainPro/QMacVisual/QtWidgetsSaveLoad/: QtWidgetsSaveLoad.cpp
src/QMainPro/QMacVisual/autoThread/: autoThread.cpp
src/QMainPro/QMacVisual/basemainwindow/: basemainwindow.cpp
src/QMainPro/QMacVisual/clogmodel/: clogmodel.cpp
src/QMainPro/QMacVisual/cmysplashscreen/: cmysplashscreen.cpp
src/QMainPro/QMacVisual/datavar/: datavar.cpp
src/QMainPro/QMacVisual/dockwidget/: dockwidget.cpp
src/QMainPro/QMacVisual/frmAbout/: frmAbout.cpp
src/QMainPro/QMacVisual/frmCameraSetUp/: frmCameraSetUp.cpp
src/QMainPro/QMacVisual/frmGlobalVariable/: frmGlobalVariable.cpp
src/QMainPro/QMacVisual/frmImageLayout/: frmImageLayout.cpp
src/QMainPro/QMacVisual/frmImageView/: frmImageView.cpp
src/QMainPro/QMacVisual/frmInstrumentation/: frmInstrumentation.cpp
src/QMainPro/QMacVisual/frmLink/: frmLink.cpp
src/QMainPro/QMacVisual/frmLog/: frmLog.cpp
src/QMainPro/QMacVisual/frmLogin/: frmLogin.cpp
src/QMainPro/QMacVisual/frmPermis/: frmPermis.cpp
src/QMainPro/QMacVisual/frmProItemTab/: frmProItemTab.cpp
src/QMainPro/QMacVisual/frmProcessSetUp/: frmProcessSetUp.cpp
src/QMainPro/QMacVisual/frmQuit/: frmQuit.cpp
src/QMainPro/QMacVisual/frmRegister/: frmRegister.cpp
src/QMainPro/QMacVisual/frmSystemSetUp/: frmSystemSetUp.cpp
src/QMainPro/QMacVisual/frmToolsTree/: frmToolsTree.cpp
src/QMainPro/QMacVisual/frmVisualLogo/: frmVisualLogo.cpp
src/QMainPro/QMacVisual/gvariable/: gvariable.cpp
src/QMainPro/QMacVisual/headwidget/: headwidget.cpp
src/QMainPro/QMacVisual/mainwidget/: mainwidget.cpp
src/QMainPro/QMacVisual/mainwindow/: mainwindow.cpp
src/QMainPro/QMacVisual/manualThread/: manualThread.cpp
src/QMainPro/QMacVisual/mytitlebar/: mytitlebar.cpp
src/QMainPro/QMacVisual/qttreewidget/: qttreewidget.cpp
src/QMainPro/QMacVisual/res/: default.qss
src/QMainPro/QMacVisual/showcpumemory/: showcpumemory.cpp
src/QPlugins/CalibrationTools/: CMakeLists.txt
src/QPlugins/CalibrationTools/DistortionCalibration/: CMakeLists.txt  DistortionCalibration.h  DistortionCalibration.vcxproj  distortioncalibration_global.h  frmDistortionCalibration.h  frmDistortionCalibration.ui  mytitlebar.cpp  sub_res.qrc
src/QPlugins/CalibrationTools/ERTCalibration/: CMakeLists.txt  ERTCalibration.h  ERTCalibration.vcxproj  ertcalibration_global.h  frmERTCalibration.h  frmERTCalibration.ui  sub_res.qrc
src/QPlugins/CalibrationTools/MeasureCalibration/: CMakeLists.txt  MeasureCalibration.h  MeasureCalibration.vcxproj  frmMeasureCalibration.h  frmMeasureCalibration.ui  measurecalibration_global.h  mytitlebar.cpp  sub_res.qrc
src/QPlugins/CalibrationTools/SignalCircleCalibration/: BaseItem.cpp  BaseItem.h  CMakeLists.txt  SignalCircleCalibration.cpp  SignalCircleCalibration.vcxproj  SingleCircleCalibration.h  frmSignalCircleCalibration.cpp  frmSingleCircleCalibration.h  frmSingleCircleCalibration.ui  singlecirclecalibration_global.h
src/QPlugins/CommunicateTools/: CMakeLists.txt
src/QPlugins/CommunicateTools/GeneralIo/: CMakeLists.txt  GeneralIo.h  GeneralIo.vcxproj  frmGeneralIo.h  frmGeneralIo.ui  generalio_global.h  gvariable.h  sub_res.qrc
src/QPlugins/CommunicateTools/PlcCommunicate/: CMakeLists.txt  PlcCommunicate.h  PlcCommunicate.vcxproj  PlcTcpSocket.h  frmPlcCommunicate.h  frmPlcCommunicate.ui  gvariable.h  plccommunicate_global.h  sub_res.qrc
src/QPlugins/CommunicateTools/SerialPort/: CMakeLists.txt  SerialPort.h  SerialPort.vcxproj  frmSerialPort.h  frmSerialPort.ui  gvariable.h  serialport_global.h  sub_res.qrc
src/QPlugins/CommunicateTools/SocketTcpClient/: CMakeLists.txt  SocketTcpClient.h  SocketTcpClient.vcxproj  frmSocketTcpClient.h  frmSocketTcpClient.ui  gvariable.h  sockettcpclient_global.h  sub_res.qrc
src/QPlugins/CommunicateTools/SocketTcpServer/: CMakeLists.txt  SocketTcpServer.h  SocketTcpServer.vcxproj  frmSocketTcpServer.h  frmSocketTcpServer.ui  gvariable.h  mytitlebar.cpp  (+3 more)
src/QPlugins/DetectIdentify/: CMakeLists.txt
src/QPlugins/ExtLibraryCases/: CMakeLists.txt
src/QPlugins/GeometryMeasure/: CMakeLists.txt
src/QPlugins/GeometryTools/: CMakeLists.txt
src/QPlugins/ImageProcess/: CMakeLists.txt
src/QPlugins/LogicalTools/: CMakeLists.txt
src/QPlugins/ParaTools/: CMakeLists.txt
src/QPlugins/SystemTools/: CMakeLists.txt
src/QPlugins/ThreeDInspection/: CMakeLists.txt
src/czxDependence/: Traverse.h  czxTool.h  czxTool2D.h  czxTool_std.h  nanoflann.hpp  pcl_release.props
src/czxDependence/2D/: ImageViewer.h  ParameterTuner.h  Ransac2D.h  blobAnalyze.h  photometricStero.h
src/czxDependence/3D/: PointGrid.h  Ransac3D.h
src/czxDependence/Traverse/: Traverse.cpp
src/czxDependence/czxTool/: czxTool.cpp
src/czxDependence/czxTool2D/: czxTool2D.cpp
src/czxDependence/czxTool_std/: czxTool_std.cpp
(+790 files in other folders)
