# ImageProcess plugins
add_subdirectory(CreateRoi)
add_subdirectory(CropImage)
add_subdirectory(ExportImage)
add_subdirectory(FocusFusion_D)
add_subdirectory(HDR)
add_subdirectory(ImageFlip)
add_subdirectory(ImageMorphology)
add_subdirectory(ImageRepair)
add_subdirectory(ImageRotate)
add_subdirectory(ImageSource)
add_subdirectory(ImageSplice)
add_subdirectory(ImageView)
add_subdirectory(PerspectiveTransform)
add_subdirectory(Skeleton)
add_subdirectory(photometricStero)
